--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ python:
 install:
 - python setup.py install
 - pip install coveralls
+script:
+- coverage run --source=animelyrics setup.py test
+- coveralls
